fixing sub menu alignment

--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -201,6 +201,10 @@
           text-decoration: none;
         }
       }
+
+      > ul {
+        min-width: 9rem;
+      }
     }
   }
 
